add tests for default precision config

--- a/apps/mis-server/config/mis.yaml
+++ b/apps/mis-server/config/mis.yaml
@@ -9,5 +9,5 @@ periodicSyncUserAccountBlockStatus:
   enabled: false
 
 # 为保证测试用例通过，消费精度和最小消费金额改为原有值
-jobChargeDecimalPrecision: 3
-jobMinCharge: 0
+# jobChargeDecimalPrecision: 3
+# jobMinCharge: 0
