--- a/apps/mis-server/package.json
+++ b/apps/mis-server/package.json
@@ -43,6 +43,8 @@
     "@scow/lib-ssh": "workspace:*",
     "@scow/protos": "workspace:*",
     "@scow/scheduler-adapter-protos": "workspace:*",
+    "@scow/lib-notification": "workspace:*",
+    "@scow/notification-protos": "workspace:*",
     "@scow/utils": "workspace:*",
     "@sinclair/typebox": "0.32.34",
     "dayjs": "1.11.11",
@@ -51,7 +53,8 @@
     "pino": "8.16.2",
     "pino-pretty": "10.3.1",
     "uuid": "10.0.0",
-    "wait-on": "7.2.0"
+    "wait-on": "7.2.0",
+    "@bufbuild/protobuf": "1.8.0"
   },
   "devDependencies": {
     "@types/google-protobuf": "3.15.12",
