--- a/apps/portal-web/package.json
+++ b/apps/portal-web/package.json
@@ -28,6 +28,7 @@
     "@ant-design/colors": "7.0.2",
     "@ant-design/cssinjs": "1.21.0",
     "@ant-design/icons": "5.3.7",
+    "@bufbuild/protobuf": "1.8.0",
     "@codemirror/language": "6.10.2",
     "@codemirror/legacy-modes": "6.4.0",
     "@codemirror/view": "6.28.2",
@@ -49,9 +50,13 @@
     "@scow/protos": "workspace:*",
     "@scow/rich-error-model": "workspace:*",
     "@scow/utils": "workspace:*",
+    "@scow/lib-notification": "workspace:*",
+    "@scow/notification-protos": "workspace:*",
     "@sinclair/typebox": "0.32.34",
     "@uiw/codemirror-theme-github": "4.22.2",
     "@uiw/react-codemirror": "4.21.20",
+    "@xterm/addon-fit": "0.10.0",
+    "@xterm/xterm": "5.5.0",
     "antd": "5.18.3",
     "busboy": "1.6.0",
     "dayjs": "1.11.11",
@@ -73,9 +78,7 @@
     "styled-components": "6.1.11",
     "tslib": "2.6.3",
     "typescript": "5.5.2",
-    "ws": "8.17.1",
-    "@xterm/xterm": "5.5.0",
-    "@xterm/addon-fit": "0.10.0"
+    "ws": "8.17.1"
   },
   "devDependencies": {
     "@ddadaal/next-typed-api-routes-cli": "0.9.1",
