--- a/libs/protos/notification/package.json
+++ b/libs/protos/notification/package.json
@@ -19,7 +19,7 @@
     "@bufbuild/buf": "1.34.0",
     "@bufbuild/protobuf": "1.8.0",
     "@bufbuild/protoc-gen-es": "1.8.0",
-    "@connectrpc/connect": "^1.4.0",
+    "@connectrpc/connect": "1.4.0",
     "@connectrpc/protoc-gen-connect-es": "1.4.0"
   }
 }
