refactor 重构connect rpc接口，优化相关页面展示

--- a/apps/mis-server/package.json
+++ b/apps/mis-server/package.json
@@ -38,12 +38,12 @@
     "@scow/lib-config": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
     "@scow/lib-hook": "workspace:*",
-    "@scow/lib-scow-resources": "workspace:*",
+    "@scow/lib-scow-resource": "workspace:*",
     "@scow/lib-scheduler-adapter": "workspace:*",
     "@scow/lib-server": "workspace:*",
     "@scow/lib-ssh": "workspace:*",
     "@scow/protos": "workspace:*",
-    "@scow/scow-resources-protos": "workspace:*",
+    "@scow/scow-resource-protos": "workspace:*",
     "@scow/scheduler-adapter-protos": "workspace:*",
     "@scow/utils": "workspace:*",
     "@sinclair/typebox": "0.32.34",
