连接时修改为类vnc逻辑

--- a/apps/gateway/assets/nginx.conf
+++ b/apps/gateway/assets/nginx.conf
@@ -45,6 +45,12 @@ server {
     include includes/headers;
   }
 
+  location ${BASE_PATH}${SHADOW_DESK_PATH} {
+    proxy_pass ${SHADOW_DESK_URL};
+
+    include includes/headers;
+  }
+
   location ${BASE_PATH}${PUBLIC_PATH} {
     alias ${PUBLIC_DIR};
     autoindex off;
