--- a/apps/gateway/assets/nginx.conf
+++ b/apps/gateway/assets/nginx.conf
@@ -49,6 +49,7 @@ server {
     proxy_pass ${SHADOW_DESK_URL};
 
     include includes/headers;
+    include includes/websocket;
   }
 
   location ${BASE_PATH}${PUBLIC_PATH} {
