删除多余的proxyType和proxyServer，尝试extra

--- a/apps/gateway/assets/nginx.conf
+++ b/apps/gateway/assets/nginx.conf
@@ -44,13 +44,13 @@ server {
 
     include includes/headers;
   }
+# 待修改
+  # location ${BASE_PATH}${SHADOW_DESK_PATH} {
+  #   proxy_pass ${SHADOW_DESK_URL};
 
-  location ${BASE_PATH}${SHADOW_DESK_PATH} {
-    proxy_pass ${SHADOW_DESK_URL};
-
-    include includes/headers;
-    include includes/websocket;
-  }
+  #   include includes/headers;
+  #   include includes/websocket;
+  # }
 
   location ${BASE_PATH}${PUBLIC_PATH} {
     alias ${PUBLIC_DIR};
