--- a/.github/workflows/docs-preview.yaml
+++ b/.github/workflows/docs-preview.yaml
@@ -15,6 +15,7 @@ jobs:
   deploy-docs-preview:
     name: Deploy Docs Preview
     runs-on: ${{ vars.ACTION_RUNNER_LABEL }}
+    if: ${{ false }}
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4.0.0
