--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -15,6 +15,7 @@ jobs:
   deploy-docs:
     name: Deploy to GitHub Pages
     runs-on: ${{ vars.ACTION_RUNNER_LABEL }}
+    if: ${{ false }}
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4.0.0
