--- a/.github/workflows/lint-pr-content.yaml
+++ b/.github/workflows/lint-pr-content.yaml
@@ -14,4 +14,4 @@ jobs:
     steps:
       - uses: amannn/action-semantic-pull-request@v5
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
