--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
-          token: ${{ secrets.SCOW_DEPLOYMENT_PAT }}
+          token: ${{ github.token }}
       - uses: fregante/setup-git-user@v2
       - uses: actions/setup-node@v4
         with:
