--- a/docker/Dockerfile.docs
+++ b/docker/Dockerfile.docs
@@ -23,6 +23,8 @@ COPY package.json .
 COPY pnpm-lock.yaml .
 COPY patches ./patches
 
+ENV COREPACK_NPM_REGISTRY https://registry.npmmirror.com
+
 RUN pnpm config set registry https://registry.npmmirror.com
 
 RUN pnpm fetch
