--- a/.github/workflows/test-build-publish.yaml
+++ b/.github/workflows/test-build-publish.yaml
@@ -86,11 +86,15 @@ jobs:
         with:
           log: true
           verbose: true
-          resource: "tcp:localhost:3306 tcp:localhost:6379 tcp:localhost:389 tcp:localhost:6000 tcp:localhost:6001 tcp:localhost:6002"
+          resource: "tcp:localhost:22222 tcp:localhost:3306 tcp:localhost:6379 tcp:localhost:389 tcp:localhost:6000 tcp:localhost:6001 tcp:localhost:6002"
 
       - name: Run tests
         if: vars.RUN_TESTS == 'true'
-        run: pnpm test:ci
+        run: |
+          sleep 5
+          docker compose --env-file dev/.env.dev -f dev/docker-compose.dev.yml logs ssh-server
+          docker ps
+          pnpm test:ci
 
       - name: Upload test converage
         uses: codecov/codecov-action@v4
