--- a/.github/workflows/test-build-publish.yaml
+++ b/.github/workflows/test-build-publish.yaml
@@ -182,6 +182,10 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: |
+            env.http_proxy=${{ vars.HTTPS_PROXY }}
+            env.https_proxy=${{ vars.HTTPS_PROXY }}
 
       - name: Log in to the GitHub Container registry
         uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567
