refactor: 修改环境变量 nginx 等

--- a/apps/gateway/assets/nginx.conf
+++ b/apps/gateway/assets/nginx.conf
@@ -39,6 +39,14 @@ server {
     include includes/websocket;
   }
 
+  location ${BASE_PATH}${NOTIF_PATH} {
+    set $ai_path_url ${NOTIF_PATH_INTERNAL_URL};
+    proxy_pass $ai_path_url;
+
+    include includes/headers;
+    include includes/websocket;
+  }
+
   location ${BASE_PATH}${VNC_PATH} {
     proxy_pass ${NOVNC_INTERNAL_URL};
 
