fix: 移动数据库相关文件位置

--- a/apps/notification/package.json
+++ b/apps/notification/package.json
@@ -97,7 +97,7 @@
   "mikro-orm": {
     "useTsNode": true,
     "configPaths": [
-      "./src/server/db/mikro-orm.config.ts"
+      "./src/server/mikro-orm.config.ts"
     ]
   }
 }
