refactor: notif->notification

--- a/apps/gateway/assets/nginx.conf
+++ b/apps/gateway/assets/nginx.conf
@@ -39,8 +39,8 @@ server {
     include includes/websocket;
   }
 
-  location ${BASE_PATH}${NOTIF_PATH} {
-    set $ai_path_url ${NOTIF_PATH_INTERNAL_URL};
+  location ${BASE_PATH}${NOTIFICATION_PATH} {
+    set $ai_path_url ${NOTIFICATION_PATH_INTERNAL_URL};
     proxy_pass $ai_path_url;
 
     include includes/headers;
