fix: start.mjs missing

--- a/apps/gateway/assets/nginx.conf
+++ b/apps/gateway/assets/nginx.conf
@@ -40,8 +40,8 @@ server {
   }
 
   location ${BASE_PATH}${NOTIFICATION_PATH} {
-    set $ai_path_url ${NOTIFICATION_PATH_INTERNAL_URL};
-    proxy_pass $ai_path_url;
+    set $notification_path_url ${NOTIFICATION_PATH_INTERNAL_URL};
+    proxy_pass $notification_path_url;
 
     include includes/headers;
     include includes/websocket;
