fix: 新增 repo 参数区分不同项目

--- a/.github/workflows/test-build-publish.yaml
+++ b/.github/workflows/test-build-publish.yaml
@@ -226,4 +226,7 @@ jobs:
         run: |
           curl -X POST ${{ secrets.RELEASE_SERVICE_ADDRESS }}/version/success \
           -H "Content-Type: application/json" \
-          -H "Authorization: Bearer ${{ secrets.RELEASE_API_KEY }}"
+          -H "Authorization: Bearer ${{ secrets.RELEASE_API_KEY }}" \
+          -d '{
+            "repo": "SCOW"
+          }'
