--- a/apps/mis-web/package.json
+++ b/apps/mis-web/package.json
@@ -35,16 +35,17 @@
     "@scow/lib-auth": "workspace:*",
     "@scow/lib-config": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
+    "@scow/lib-notification": "workspace:*",
     "@scow/lib-operation-log": "workspace:*",
     "@scow/lib-web": "workspace:*",
+    "@scow/notification-protos": "workspace:*",
     "@scow/protos": "workspace:*",
     "@scow/rich-error-model": "workspace:*",
     "@scow/utils": "workspace:*",
-    "@scow/lib-notification": "workspace:*",
-    "@scow/notification-protos": "workspace:*",
     "@sinclair/typebox": "0.32.34",
     "antd": "5.18.3",
     "csv-stringify": "6.5.0",
+    "d3-scale": "4.0.2",
     "dayjs": "1.11.11",
     "google-protobuf": "3.21.2",
     "http-proxy": "1.18.1",
