useAsync+validateToken调试，过期token也将登出UI扩展

--- a/libs/web/package.json
+++ b/libs/web/package.json
@@ -23,7 +23,8 @@
     "@ddadaal/tsgrpc-client": "0.17.7",
     "@scow/protos": "workspace:*",
     "@scow/config": "workspace:*",
-    "@grpc/grpc-js": "1.10.9"
+    "@grpc/grpc-js": "1.10.9",
+    "@ddadaal/next-typed-api-routes-runtime": "0.8.2"
   },
   "peerDependencies": {
     "antd": "5.18.3",
