fix: 漏掉的修改

--- a/.github/ISSUE_TEMPLATE/feature-request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yaml
@@ -1,5 +1,5 @@
 name: Feature Request
-description: 为SCOW项目提出一个增强或新功能建议 | Suggest an enhancement or new feature for the SCOW project
+description: 为OpenSCOW项目提出一个增强或新功能建议 | Suggest an enhancement or new feature for the OpenSCOW project
 title: "[Feature/Enhancement] mis: Add a feature for management of cluster resource partition"
 labels: []
 body:
