--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -44,8 +44,8 @@ body:
     attributes:
       label: 之前运行正常吗？ | Did this work before?
       description: |
-        如果之前可以运行正常，SCOW是哪个版本？
-        If this worked before, what SCOW version worked correctly?
+        如果之前可以运行正常，OpenSCOW是哪个版本？
+        If this worked before, what OpenSCOW version worked correctly?
     validations:
       required: false
   - type: textarea
@@ -89,11 +89,11 @@ body:
       label: 备注 | Anything else?
       description: |
         您可以在这里补充其他关于该问题背景信息的描述、链接或引用等。
-        
+
         您可以通过点击高亮此区域然后拖动文件的方式上传图片或日志文件。
-        
+
         Links? References? Anything that will give us more context about the issue you are encountering!
-        
+
         Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
     validations:
       required: false
