--- a/libs/hook/package.json
+++ b/libs/hook/package.json
@@ -15,7 +15,7 @@
   ],
   "author": "PKUHPC (https://github.com/PKUHPC)",
   "license": "Mulan PSL v2",
-  "repository": "https://github.com/PKUHPC/SCOW",
+  "repository": "https://github.com/PKUHPC/OpenSCOW",
   "dependencies": {
     "@ddadaal/tsgrpc-client": "0.17.7",
     "@grpc/grpc-js": "1.10.9",
