--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -36,7 +36,7 @@
   },
   "author": "PKUHPC (https://github.com/PKUHPC)",
   "license": "Mulan PSL v2",
-  "repository": "https://github.com/PKUHPC/SCOW",
+  "repository": "https://github.com/PKUHPC/OpenSCOW",
   "keywords": [],
   "volta": {
     "extends": "../../package.json"
