--- a/apps/mis-web/package.json
+++ b/apps/mis-web/package.json
@@ -22,7 +22,7 @@
   ],
   "author": "PKUHPC (https://github.com/PKUHPC)",
   "license": "Mulan PSL v2",
-  "repository": "https://github.com/PKUHPC/SCOW",
+  "repository": "https://github.com/PKUHPC/OpenSCOW",
   "dependencies": {
     "@ant-design/cssinjs": "1.21.0",
     "@ant-design/icons": "5.3.7",
