--- a/apps/portal-server/package.json
+++ b/apps/portal-server/package.json
@@ -19,7 +19,7 @@
   ],
   "author": "PKUHPC (https://github.com/PKUHPC)",
   "license": "Mulan PSL v2",
-  "repository": "https://github.com/PKUHPC/SCOW",
+  "repository": "https://github.com/PKUHPC/OpenSCOW",
   "dependencies": {
     "@connectrpc/connect": "1.4.0",
     "@ddadaal/tsgrpc-common": "0.2.5",
