--- a/libs/config/package.json
+++ b/libs/config/package.json
@@ -14,7 +14,7 @@
   ],
   "author": "PKUHPC (https://github.com/PKUHPC)",
   "license": "Mulan PSL v2",
-  "repository": "https://github.com/PKUHPC/SCOW",
+  "repository": "https://github.com/PKUHPC/OpenSCOW",
   "dependencies": {
     "@scow/lib-config": "workspace:*",
     "@sinclair/typebox": "0.32.34"
