--- a/libs/scheduler-adapter/package.json
+++ b/libs/scheduler-adapter/package.json
@@ -15,7 +15,7 @@
   ],
   "author": "PKUHPC (https://github.com/PKUHPC)",
   "license": "Mulan PSL v2",
-  "repository": "https://github.com/PKUHPC/SCOW",
+  "repository": "https://github.com/PKUHPC/OpenSCOW",
   "dependencies": {
     "@grpc/grpc-js": "1.10.9",
     "@scow/protos": "workspace:*",
