--- a/libs/scowd/package.json
+++ b/libs/scowd/package.json
@@ -15,7 +15,7 @@
   ],
   "author": "PKUHPC (https://github.com/PKUHPC)",
   "license": "Mulan PSL v2",
-  "repository": "https://github.com/PKUHPC/SCOW",
+  "repository": "https://github.com/PKUHPC/OpenSCOW",
   "keywords": [],
   "dependencies": {
     "@bufbuild/protobuf": "^1.8.0",
