--- a/libs/web/package.json
+++ b/libs/web/package.json
@@ -54,5 +54,5 @@
   },
   "author": "PKUHPC (https://github.com/PKUHPC)",
   "license": "Mulan PSL v2",
-  "repository": "https://github.com/PKUHPC/SCOW"
+  "repository": "https://github.com/PKUHPC/OpenSCOW"
 }
