--- a/.github/workflows/test-build-publish.yaml
+++ b/.github/workflows/test-build-publish.yaml
@@ -143,7 +143,7 @@ jobs:
 
           - name: docs
             file: docs
-            build_args: BASE_PATH=/SCOW/
+            build_args: BASE_PATH=/OpenSCOW/
 
     steps:
       - uses: actions/checkout@v4
