--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -15,7 +15,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
-          token: ${{ github.token }}
+          # Must use a PAT instead of GITHUB_TOKEN
+          # Events triggered by the GITHUB_TOKEN, with the exception of workflow_dispatch and repository_dispatch, will not create a new workflow run.
+          # https://docs.github.com/en/actions/security-for-github-actions/security-guides/automatic-token-authentication#using-the-github_token-in-a-workflow
+          token: ${{ secrets.RELEASE_GITHUB_PAT }}
       - uses: fregante/setup-git-user@v2
       - uses: actions/setup-node@v4
         with:
