--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -1,7 +1,7 @@
-name: Bug Report
+name: 错误报告 | Bug Report
 description: 提交错误报告来帮助我们改进 | Create a report to help us improve
 title: "[Bug/Help] auth: User does not exist when I login"
-labels: []
+labels: ["bug"]
 body:
   - type: markdown
     attributes:
