--- a/.github/workflows/pr-cleanup.yaml
+++ b/.github/workflows/pr-cleanup.yaml
@@ -7,14 +7,13 @@ on:
 jobs:
   delete-openscow-vagrant:
     name: Delete openscow-vagrant PR branch
-    if: vars.PUSH_VAGRANT == 'true'
-    runs-on: ${{ vars.ACTION_RUNNER_LABEL }}
+    runs-on: ubuntu-latest
     steps:
       - name: Delete openscow-vagrant PR branch
         uses: dawidd6/action-delete-branch@v3
         with:
           github_token: ${{ secrets.SCOW_DEPLOYMENT_PAT }}
-          owner: ${{ vars.VAGRANT_REPO_OWNER }}
-          repository: ${{ vars.VAGRANT_REPO_NAME }}
+          owner: PKUHPC
+          repository: scow-vagrant
           branches: ${{ github.event.number }}/merge
           soft_fail: true
