--- a/apps/mis-server/config/mis.yaml
+++ b/apps/mis-server/config/mis.yaml
@@ -7,3 +7,10 @@ db:
 
 periodicSyncUserAccountBlockStatus:
   enabled: false
+
+deleteUser:
+  enabled: true
+  nameMarker: "(已删除)"
+
+deleteAccount:
+  enabled: true
