--- a/dev/vagrant/config/mis.yaml
+++ b/dev/vagrant/config/mis.yaml
@@ -148,4 +148,17 @@ createUser:
 #       en: "The billing for  jobId {{ idJob }} of Cluster {{ cluster }}"
 #       zh_cn: "集群 {{ cluster }} 的作业ID {{ idJob }} 的计费"
 
+# 删除用户相关配置
+deleteUser:
 
+  # 是否允许用户从SCOW中删除用户
+  enabled: true
+
+  # 删除标识
+  nameMarker: "(已删除)"
+
+# 删除账户相关配置
+deleteAccount:
+
+  # 是否允许用户从SCOW中删除账户，默认允许
+  enabled: true
