fix: 修改删除用户账户默认为不允许，配置项存在改为可选 (#35)
* 修改删除用户账户默认为不允许，配置项存在改为可选

* changeset

* 没有配置ldap的deleteUser权限时默认为false

* fix: 解决test报错

--- a/apps/auth/config/auth.yml
+++ b/apps/auth/config/auth.yml
@@ -74,6 +74,9 @@ ldap:
     extraProps:
       # test overriding existing property
       mail: mail is {{ mail }}
+  deleteUser:
+    enabled: true
+
   attrs:
     uid: uid
     name: cn
