--- a/.github/workflows/side-projects.yaml
+++ b/.github/workflows/side-projects.yaml
@@ -11,12 +11,45 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  VAGRANT_ORG: PKUHPC
+  VAGRANT_REPO: scow-vagrant
+
 jobs:
+
+  openscow-vagrant-check:
+    name: Check if the user has write permission to vagrant repo
+    runs-on: ubuntu-latest
+    outputs:
+      has_write_permission: ${{ steps.check-permission.outputs.result }}
+    steps:
+
+      - uses: actions/checkout@v4
+
+      - name: Check if the user has write permission to ${{ env.VAGRANT_ORG }}/${{ env.VAGRANT_REPO }}
+        id: check-permission
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const { data: { permission } } = await github.repos.getCollaboratorPermissionLevel({
+              owner: '${{ env.VAGRANT_ORG }}',
+              repo: '${{ env.VAGRANT_REPO }}',
+              username: github.context.actor
+            });
+
+            console.log(`The user has ${permission} permission to ${env.VAGRANT_ORG}/${env.VAGRANT_REPO}`);
+
+            return permission === 'admin' || permission === 'write';
+
+
   openscow-vagrant:
     name: Update openscow-vagrant
     runs-on: ubuntu-latest
+
+    needs: openscow-vagrant-check
+    if: needs.openscow-vagrant-check.outputs.has_write_permission == 'true'
+
     steps:
-      - uses: actions/checkout@v4
 
       - name: Create version file for tag commit
         if: github.ref_type == 'tag'
