--- a/.github/workflows/side-projects.yaml
+++ b/.github/workflows/side-projects.yaml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            const { data: { permission } } = await github.repos.getCollaboratorPermissionLevel({
+            const { data: { permission } } = await github.rest.repos.getCollaboratorPermissionLevel({
               owner: '${{ env.VAGRANT_ORG }}',
               repo: '${{ env.VAGRANT_REPO }}',
               username: github.context.actor,
